--- a/src/app/pages/company/about-us/programs-section.scss
+++ b/src/app/pages/company/about-us/programs-section.scss
@@ -95,7 +95,7 @@
     line-height: 1;
 }
 
-.date-box .year {
+.date-box .program-section-year {
     font-size: 1.2rem;
     font-weight: bold;
     line-height: 1;
