fix: program tab styles

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -468,27 +468,26 @@
             <div class="outreach-grid">
 
               <div class="outreach-content">
-                <div class="quote-icon">
-                  <i class="fas fa-quote-left"></i>
-                </div>
-                <p>
-                  <span
-                    style="font-family: 'Bebas neue', sans-serif; font-weight: 400; font-size: 64px; text-align: justify; color: red;">"T</span>he
-                  company aims to meet the needs of Academe and Industry, focusing on
-                  creating a competitive workforce for a prosperous Filipino society. Outreach to underprivileged
-                  members is also vital. During Christmas, Hytec Power Incorporated (HPI) partnered with a rotary club
-                  for community service projects. HPI donated an LCD TV to the SPED Department of Commonwealth
-                  Elementary School, featured on ABS-CBN's "Mutya Ng Masa."
-                </p>
-                <br>
-                <p>
-                  At the Christmas Party, HPI showcased a robot presentation with NAO, entertaining special children.
-                  HPI also provided Fischer Tips educational materials. The Rotary Club offered snacks, while ABS-CBN
-                  sponsored meals, toys, and clowns for entertainment. HPI collaborated with the Rotary Club for toy and
-                  gift-giving events in December, benefiting over 2,000 children across three venues.
-                </p>
+                <div class="text-body">
+                  <p>
+                    <span class="drop-cap">&ldquo;T</span>he company aims to meet the needs of Academe and Industry, focusing
+                    on
+                    creating a competitive workforce for a prosperous Filipino society. Outreach to underprivileged
+                    members is also vital. During Christmas, Hytec Power Incorporated (HPI) partnered with a rotary club
+                    for community service projects. HPI donated an LCD TV to the SPED Department of Commonwealth
+                    Elementary School, featured on ABS-CBN's "Mutya Ng Masa."
+                  </p>
+                  <br>
+                  <p>
+                    At the Christmas Party, HPI showcased a robot presentation with NAO, entertaining special children.
+                    HPI also provided Fischer Tips educational materials. The Rotary Club offered snacks, while ABS-CBN
+                    sponsored meals, toys, and clowns for entertainment. HPI collaborated with the Rotary Club for toy
+                    and
+                    gift-giving events in December, benefiting over 2,000 children across three venues.
+                  </p>
 
-                <p class="author-byline">By Engr. Augie C. Soliman</p>
+                  <p class="author-byline">By Engr. Augie C. Soliman</p>
+                </div>
               </div>
 
               <div class="outreach-gallery">
