[Navigation] - fix navbar layout distortion on laptop viewports

--- a/src/app/components/main-header/main-header.html
+++ b/src/app/components/main-header/main-header.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="assets/icons/main-header/hytec-logo.svg" class="header-image">
+  <img src="assets/icons/main-header/hytec-logo.svg" class="header-image" alt="Hytec Power Inc">
 
   <nav>
     <ul>
@@ -7,7 +7,7 @@
         <a routerLink="/home" routerLinkActive="active-link" class="anchor">HOME</a>
       </li>
 
-      <li class="nav-item  has-dropdown">
+      <li class="nav-item has-dropdown">
         <a routerLink="/solutions" class="anchor">
           SOLUTIONS
           <span class="dropdown-arrow">&#9662;</span>
@@ -16,19 +16,21 @@
         <ul class="dropdown-menu">
           <li class="dropdown-item">
             <a routerLink="/solutions/educational">
-              <img src="assets/icons/main-header/educational-solutions.svg">
-              <h1>EDUCATIONAL SOLUTIONS</h1>
-              <span></span>
-              <p>Tie your education to employment.</p>
+              <img src="assets/icons/main-header/educational-solutions.svg" alt="Edu">
+              <div class="text-group">
+                <h1>EDUCATIONAL SOLUTIONS</h1>
+                <p>Tie your education to employment.</p>
+              </div>
             </a>
           </li>
 
           <li class="dropdown-item">
             <a routerLink="/solutions/industrial">
-              <img src="assets/icons/main-header/industrial-solutions.svg">
-              <h1>INDUSTRIAL SOLUTIONS</h1>
-              <span></span>
-              <p>Provides skills-based industrial solutions.</p>
+              <img src="assets/icons/main-header/industrial-solutions.svg" alt="Ind">
+              <div class="text-group">
+                <h1>INDUSTRIAL SOLUTIONS</h1>
+                <p>Provides skills-based industrial solutions.</p>
+              </div>
             </a>
           </li>
         </ul>
@@ -51,37 +53,44 @@
         <ul class="dropdown-menu">
           <li class="dropdown-item">
             <a routerLink="/about-us">
-              ABOUT US
+              <div class="text-group">
+                <h1>ABOUT US</h1>
+              </div>
             </a>
           </li>
-
           <li class="dropdown-item">
             <a routerLink="/company/sponsorship">
-              SPONSORSHIP
+              <div class="text-group">
+                <h1>SPONSORSHIP</h1>
+              </div>
             </a>
           </li>
-
           <li class="dropdown-item">
             <a routerLink="/company/careers">
-              CAREERS
+              <div class="text-group">
+                <h1>CAREERS</h1>
+              </div>
             </a>
           </li>
-
           <li class="dropdown-item">
             <a routerLink="/company/team">
-              TEAM
+              <div class="text-group">
+                <h1>TEAM</h1>
+              </div>
             </a>
           </li>
-
           <li class="dropdown-item">
             <a routerLink="/company/project-and-case-studies">
-              PROJECT & CASE STUDIES
+              <div class="text-group">
+                <h1>PROJECT AND CASE STUDIES</h1>
+              </div>
             </a>
           </li>
-
           <li class="dropdown-item">
             <a routerLink="/company/our-contacts">
-              OUR CONTACTS
+              <div class="text-group">
+                <h1>OUT CONTACTS</h1>
+              </div>
             </a>
           </li>
         </ul>
@@ -92,7 +101,7 @@
   <div class="search-bar">
     <input type="text" placeholder="Search here...">
     <div class="search-button">
-      <img src="assets/icons/main-header/magnifying-glass.svg">
+      <img src="assets/icons/main-header/magnifying-glass.svg" alt="Search">
     </div>
   </div>
 </header>
