refactor: [aboutus] cleanup inline styles, hero section

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -1,19 +1,17 @@
 <main-header></main-header>
-<div style="width:100%; position:relative;">
-  <img style="width:100%; height:auto; z-index:-1;" src="assets/images/aboutus/aboutusBG.png" draggable="false" alt="">
-  <img style="opacity:23%; width:60vw; position: absolute; top:-35vh; left:-20vw; z-index:0;"
-    src="assets/images/aboutus/spot2.png" draggable="false" alt="">
-  <img style="opacity:13%; width:50vw; position: absolute; top:1vh; right:8vw; z-index:0;"
-    src="assets/images/aboutus/spot2.png" draggable="false" alt="">
-  <div
-    style="gap:3vh; position:absolute; color:white; left:50%; top:50%; transform: translate(-50%, -50%); display: flex; flex-direction: column; align-items: center;">
+
+<div class="hero-section">
+  <img class="hero-bg" src="assets/images/aboutus/aboutusBG.png" draggable="false" alt="">
+  <img class="spot-img left" src="assets/images/aboutus/spot2.png" draggable="false" alt="">
+  <img class="spot-img right" src="assets/images/aboutus/spot2.png" draggable="false" alt="">
+
+  <div class="hero-content">
     <div class="since">
       <p class="largeBody">Since 1994</p>
     </div>
-    <div class="headline" style="display: flex; flex-direction: column; align-items: center; z-index: 100;">
-      <p class="xxldisplay hero-title" style="margin:0 0 2vh 0; text-wrap:inherit;">HYTEC POWER INCORPORATED</p>
-      <p class="largeEmphasizedTitle" style="margin:0;">Empowering Industrial and Educational Solutions for Over 30
-        years</p>
+    <div class="headline">
+      <p class="xxldisplay hero-title">HYTEC POWER INCORPORATED</p>
+      <p class="largeEmphasizedTitle no-margin">Empowering Industrial and Educational Solutions for Over 30 years</p>
     </div>
   </div>
 </div>
