refactor: update font family

--- a/src/app/pages/company/about-us/programs-section.scss
+++ b/src/app/pages/company/about-us/programs-section.scss
@@ -45,6 +45,7 @@
 }
 
 .top-desc {
+    font-family: "Poppins", sans-serif;
     font-size: 0.85rem;
     margin-bottom: 15px;
     text-align: justify;
@@ -273,6 +274,7 @@
 }
 
 .text-body p {
+    font-family: "Poppins", sans-serif;
     font-size: 0.95rem;
     line-height: 1.8;
     text-align: justify;
