--- a/src/app/pages/company/about-us/programs-section.scss
+++ b/src/app/pages/company/about-us/programs-section.scss
@@ -45,7 +45,7 @@
 }
 
 .top-desc {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif; //bruh
     font-size: 0.85rem;
     margin-bottom: 15px;
     text-align: justify;
