fix: unify aboutus style

--- a/src/app/pages/company/about-us/about-us.html
+++ b/src/app/pages/company/about-us/about-us.html
@@ -136,8 +136,8 @@
           leading industrial and educational solutions provider in the Philippines.
         </p>
       </div>
-      <div class="appearance">
-        <p class="smallHeadline">TY Appearances</p>
+      <div class="ty_appearance-section">
+        <h2>TY Appearances</h2>
         <p class="largeBody">Appearances at Umagang Kay Ganda, AHA!, Good Morning Dub and Suit Up!</p>
         <div class="image-section">
           <img src="assets/images/aboutus/awards/image-1.png" alt="">
